2004-06-24 Borut Razem <borut.razem@siol.net>
	* plat/win32/fd2raw.cpp, plat/win32/fd2raw.h: funtions to set the WIN32
	  console to raw mode.
	* cli/input.cc: call functions to set WIN32 console to raw mode
	* gui/gui.vcproj: added fd2raw.cpp and fd2raw.h to the project
	* cli/cli.vcproj: added errors.cc and errors.h to the project

2004-06-16 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def, gui/gui_src_asm.cc, src/symbol.cc, src/symbol.h:
	  small fixes to enable compilation on MSVC

2004-06-15 Scott Dattalo <scott@dattalo.com>
	* more pedantic fixes 

2004-06-14 Scott Dattalo <scott@dattalo.com>
	* more pedantic fixes (mostly in cli)

2004-06-14 Scott Dattalo <scott@dattalo.com>
	* tons of pedantic fixes (and there are many more needed).
	
2004-06-14 Scott Dattalo <scott@dattalo.com>
	* aclocal.m4, configure.in
	The AC_DEFINE macro was incompletely defined.
	* acconfig.h: removed from CVS
	* INSTALL: updated installation instructions for CVS checkouts
	* doc/gpsim_cvs.html: Added to the CVS
	
2004-06-12 Borut Razem <borut.razem@siol.net>
	* cli/viewable.cc: #warning not recognised by MSVC
	* eXdbm/eXdbm.vcproj, gui/gui.vcproj, modules.vcproj:
	  new project files for GUI support
	* gpsim.sln, gpsim/gpsim.vcproj, cli/cli.vcproj, src/src.vcproj:
	  GUI support
	* plat/win32/gpsim.def, plat/win32/modules.def: WIN32 def files for
	  DLL modules support
	* plat/win32/glist.cpp: added g_win32_error_message() for --disable-gui
	* cli/input.c: define gpsim_rl_getc() only if defined HAVE_READLINE &&
	  defined HAVE_GUI

2004-06-09 Scott Dattalo <scott@dattalo.com>
	* cli/expr.cc, cli/expr.h, cli/viewable.h, cli/viewable.cc, 
	cli/operator.h, cli/operator.cc: New files to support parsing
	* cli/parse.yy, cli/scan.ll: added new parsing and lexing rules
	for expression parsing.
	* src/stimuli.cc: Manuel Boyer found and fixed a bug where the
	a named stimulus was ignoring its newly assigned name.

2004-06-09 Scott Dattalo <scott@dattalo.com>