@@ -23,6 +23,7 @@ Boston, MA 02111-1307, USA.  */
 
 #include <unistd.h>
 #include <glib.h>
+#include "expr.h"
 
 class cmd_break : public command
 {
@@ -31,12 +32,15 @@ public:
   cmd_break(void);
   void list(void);
 
+  void set_break(cmd_options *co, ExprList_t *el=0);
+private:
+  
   void set_break(int bit_flag);
   void set_break(int bit_flag,guint64 value);
-  void set_break(int bit_flag,int reg, int value,int mask);
+  void set_break(int bit_flag,guint64 reg, guint64 value,guint64 mask);
   void set_break(int bit_flag,char *sym);
   void set_break(int bit_flag,char *sym, int value,int mask);
-
+   
 
 };
 
