@@ -1,3 +1,9 @@
+2004-06-15 Scott Dattalo <scott@dattalo.com>
+	* cli/cmd_break.cc, cli/cmd_break.h, cli/cmd_log.cc,
+	cli/cmd_log.h, cli/cmd_stimulus.h, cli/command.cc, 
+	cli/command.h, cli/expr.cc, cli/expr.h, cli/parse.yy,cli/scan.ll:
+	The 'break' and 'log' commands now accept expressions
+	
 2004-06-24 Borut Razem <borut.razem@siol.net>
 	* plat/win32/fd2raw.cpp, plat/win32/fd2raw.h: funtions to set the WIN32
 	  console to raw mode.
